2005-09-04  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.c: (cb_row_selected):
	* src/gnome-system-monitor.schemas.in:
	* src/infoview.c:
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (update_sensitivity):
	* src/procman.c: (procman_data_new), (procman_save_config):
	* src/procman.h:
	* src/proctable.c: (proctable_update_all):

	Got rid of the infoview.

2005-09-04  Benoît Dejean  <benoit@placenet.org>

	* src/infoview.c: (infoview_update):
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(get_process_memory_info), (update_info_mutable_cols),
	(procinfo_new):
	* src/proctable.h:

	Removed the "Memory" and "RSS memory" columns. There are pretty
	useless or misleading. Now we have RES, Shared, Virtual and X.

2005-09-03  Benoît Dejean  <benoit@placenet.org>

	* AUTHORS:
	* src/callbacks.c: (cb_about): Synced authors.

2005-09-02  Paolo Borelli  <pborelli@katamail.com>

	* src/load-graph.c: draw the graph with cairo (bug #315111).
	* AUTHORS: add myself.

2005-09-02  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Post release bump to 2.13.0
	Requires gtk+ > 2.8.

2005-08-22  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.11.92.

2005-08-11  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.c:
	* src/disks.c: (sort_bytes), (fsusage_stats),
	(get_icon_for_device), (add_disk), (cb_update_disks),
	(create_disk_view):
	* src/disks.h:
	* src/interface.c:

	Reworked the disk view and moved everything related in
	disks.[ch]. The new device list handling is much simpler and no
	longer hides duplicate mount points. The sort should also be a bit
	more stable.

2005-08-11  Benoît Dejean  <benoit@placenet.org>

	* src/prettytable.c: (pretty_table_get_icon):

	#if 0 debug message.

2005-08-09  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Post release bymp

	* src/callbacks.c: (cb_update_disks):

	Fixed devices list. Now uses mountdir as key instead of devname.