@@ -117,7 +117,7 @@
       <default>False</default>
       <locale name="C">
         <short>Whether information about all filesystems should be displayed</short>
-        <long>Whether information about all filesystems should be displayed:  this will include filesystem types like 'autofs' and 'procfs'. It can be usefull to get a list of all currently mounted filesystems.</long>
+        <long>Whether to display information about all filesystems (including types like 'autofs' and 'procfs'). Useful for getting a list of all currently mounted filesystems.</long>
       </locale>
       </schema>
 
