@@ -1,3 +1,14 @@
+2005-10-12  Adam Weinberger  <adamw@gnome.org>
+
+	* src/interface.c: Change "Receive" and "Send"
+	  labels to read "Received" and "Sent", to accurately
+	  portray what they're counting. Fixes bug #318714
+	  submitted by Christian Rose.
+	* src/gnome-system-monitor.schemas.in.h: Reword a
+	  confusing schema description, correcting a spelling
+	  error in the process. Fixes bug #318712, submitted by
+	  Christian Rose.
+
 2005-09-04  Benoît Dejean  <benoit@placenet.org>
 
 	* src/Makefile.am:
